--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,6 @@ import { isCampaignEnded } from '../utils/campaign';
 			)
 		}
 		<AboutSection />
-		<Navbar client:idle />
+		<!-- <Navbar client:idle /> -->
 	</main>
 </Body>
