feat: add sign section

--- a/src/components/index/SignSection.astro
+++ b/src/components/index/SignSection.astro
@@ -10,12 +10,8 @@ import SignOptions from './SignOptions.svelte';
 	hideNavbar
 >
 	<div class="flex w-full max-w-sm flex-col gap-4 text-base-100">
-		<h2 class="heading-responsive-02 text-center md:text-left">ร่วมลงชื่อ</h2>
-		<p class="text-center md:text-left">
-			(optional) Lorem ipsum dolor sit amet consectetur. Ut adipiscing risus
-			nibh consectetur.
-		</p>
-		<div class="space-y-2 rounded-lg border border-base-100 px-4 py-3">
+		<img src="register.png" alt="register" />
+		<div class="space-y-2 rounded-lg bg-info px-4 py-3">
 			<span class="font-bold">คุณสมบัติของผู้เข้าชื่อเสนอกฎหมาย</span>
 			<ul class="ml-7 list-outside list-disc">
 				<li>
