feat: add about section

--- a/src/components/index/AboutSection.astro
+++ b/src/components/index/AboutSection.astro
@@ -3,56 +3,14 @@ import SectionContainer from '../SectionContainer.astro';
 ---
 
 <SectionContainer
-	outerClass="bg-base-200"
-	innerClass="flex max-w-screen-md flex-col items-center gap-8 text-center"
+	outerClass="bg-primary"
+	innerClass="relative flex max-w-screen-md flex-col items-center text-center"
 >
-	<h2 class="heading-responsive-02">รู้จักเรา</h2>
-
-	<div class="flex flex-col items-center gap-4">
-		<h3 class="heading-03">ชื่อองค์กรหลัก</h3>
-		<img src="https://placehold.co/100x100" alt="" />
-		<p>
-			Lorem ipsum dolor sit amet consectetur. Erat leo id neque tristique enim
-			elementum gravida. Ornare ultrices ac in a turpis ut. Lacus sit mollis
-			molestie est aliquet porta cursus. Suscipit gravida vivamus lacus
-			faucibus. Diam leo id proin semper amet consectetur vel. Integer amet dui
-			dui fringilla in nulla venenatis etiam sem. Adipiscing cras mattis
-			interdum nec mi fermentum. Vulputate integer et commodo arcu consectetur.
-			Ultrices pharetra proin posuere sed vulputate tempus aliquam.
-		</p>
+	<h2 class="body-03 font-semibold">ผู้จัดทำ</h2>
+	<div class="body-02 mt-[10px] text-center">
+		จัดทำขึ้นโดยภาคประชาชนชาวเชียงใหม่ ที่ต้องการปลดล็อคเชียงใหม่
+		จากการรวมศูนย์อำนาจ รัฐส่วนกลาง <br /> ให้เชียงใหม่จัดการตนเองโดยไม่จำเป็น ต้องรอรัฐส่วนกลางอีกต่อไป
 	</div>
-
-	<div class="flex flex-col items-center gap-4">
-		<h3 class="heading-03">Partners</h3>
-
-		<div class="flex flex-row flex-wrap justify-center gap-2">
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-			<a href="/#" target="_blank" rel="noopener noreferrer">
-				<img src="https://placehold.co/44x44" alt="org name" />
-			</a>
-		</div>
-	</div>
+	<img class="-mt-[120px]" src="group-work.png" alt="group work" />
+	<img class="-mt-10" src="activities.png" alt="activities" />
 </SectionContainer>
