--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -16,25 +16,26 @@ import BackHomeLink from '../components/BackHomeLink.astro';
 		</h1>
 
 		<p>
-			<mark>ชื่อทีม/คนเสนอกฏหมาย</mark>
-			(ต่อไปนี้จะเรียกว่า "เรา") ผู้ดำเนินการรวบรวมรายชื่อ เพื่อเสนอ<mark
-				>ร่างพระราชบัญญัติ... พ.ศ. ....</mark
-			> เคารพความเป็นส่วนตัวและ ตระหนักถึงความสำคัญของการคุ้มครองข้อมูลส่วนบุคคล
-			จึงต้องมีนโยบายคุ้มครองข้อมูลส่วนบุคคลนี้ เพื่อชี้แจงรายละเอียดและ วิธีการจัดเก็บรวบรวม
-			ใช้ และ/หรือเปิดเผย การคุ้มครองข้อมูล การเข้าถึงข้อมูล การโอนย้าย และการวิเคราะห์ประมวลผลข้อมูลส่วน
-			บุคคลของท่าน ดังต่อไปนี้ นโยบายการคุ้มครองข้อมูลส่วนบุคคล (Privacy Policy)
-			นี้อยู่ภายใต้พระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562 โดย เรามีอำนาจหน้าที่ตัดสินใจเกี่ยวกับการเก็บรวบรวม
-			ใช้ หรือเปิดเผยข้อมูลส่วนบุคคล ซึ่งตามกฎหมายเรียกว่า “ผู้ควบคุมข้อมูลส่วน บุคคล"
-			ส่วนท่านถือเป็น “เจ้าของข้อมูลส่วนบุคคล" ตามกฎหมายนี้
+			คณะทำงานรณรงค์ร่างพระราชบัญญัติระเบียบบริหารราชการเชียงใหม่มหานคร พ.ศ....
+			(ต่อไปนี้จะเรียกว่า "เรา") ผู้ดำเนินการรวบรวมรายชื่อ
+			เพื่อเสนอร่างพระราชบัญญัติระเบียบบริหารราชการเชียงใหม่มหานคร พ.ศ....
+			เคารพความเป็นส่วนตัวและ ตระหนักถึงความสำคัญของการคุ้มครองข้อมูลส่วนบุคคล
+			จึงต้องมีนโยบายคุ้มครองข้อมูลส่วนบุคคลนี้ เพื่อชี้แจงรายละเอียดและ
+			วิธีการจัดเก็บรวบรวม ใช้ และ/หรือเปิดเผย การคุ้มครองข้อมูล
+			การเข้าถึงข้อมูล การโอนย้าย และการวิเคราะห์ประมวลผลข้อมูลส่วน บุคคลของท่าน
+			ดังต่อไปนี้ นโยบายการคุ้มครองข้อมูลส่วนบุคคล (Privacy Policy)
+			นี้อยู่ภายใต้พระราชบัญญัติคุ้มครองข้อมูลส่วนบุคคล พ.ศ. 2562 โดย
+			เรามีอำนาจหน้าที่ตัดสินใจเกี่ยวกับการเก็บรวบรวม ใช้
+			หรือเปิดเผยข้อมูลส่วนบุคคล ซึ่งตามกฎหมายเรียกว่า “ผู้ควบคุมข้อมูลส่วน
+			บุคคล" ส่วนท่านถือเป็น “เจ้าของข้อมูลส่วนบุคคล" ตามกฎหมายนี้
 		</p>
 
 		<p>
 			เราจะทำการเก็บรวบรวมข้อมูลส่วนบุคคลโดยมี วัดถุประสงค์ ขอบเขต
 			และใช่วิธีการที่ชอบด้วยกฎหมายและเป็นธรรม โดยใน
-			การเก็บรวบรวมนั้นจะทำเพียงเท่าที่จำเป็นแก่การดำเนินงานภายใต้วัตถุประสงค์การรวบรวมรายชื่อเพื่อเสนอ<mark
-				>ร่างพระราชบัญญัติ... พ.ศ. ....</mark
-			> เท่านั้น โดยดำเนินการภายใต้ความยินยอมของ "เจ้าของข้อมูล ส่วนบุคคล" จากการขอความยินยอมโดยชัดแจ้งก่อนท่าการเก็บรวบรวม
-			ใช้/หรือเปิดเผย
+			การเก็บรวบรวมนั้นจะทำเพียงเท่าที่จำเป็นแก่การดำเนินงานภายใต้วัตถุประสงค์การรวบรวมรายชื่อเพื่อเสนอร่างพระราชบัญญัติระเบียบบริหารราชการเชียงใหม่มหานคร
+			พ.ศ.... เท่านั้น โดยดำเนินการภายใต้ความยินยอมของ "เจ้าของข้อมูล ส่วนบุคคล"
+			จากการขอความยินยอมโดยชัดแจ้งก่อนท่าการเก็บรวบรวม ใช้/หรือเปิดเผย
 		</p>
 
 		<div>
@@ -46,10 +47,13 @@ import BackHomeLink from '../components/BackHomeLink.astro';
 			</p>
 			<ul>
 				<li>
-					ข้อมูลส่วนตัว เช่น <mark>ชื่อ นามสกุล และเลขประจำตัวประชาชน</mark>
+					ข้อมูลส่วนตัว เช่น ชื่อ นามสกุล อายุ วันเดือนปีเกิด เลขประจำตัวประชาชน
 				</li>
 				<li>
-					ข้อมูลอื่นๆ เช่น <mark>ลายมือชื่อ</mark>
+					ข้อมูลการติดต่อ เช่น ที่อยู่อาศัย สถานที่ทํางาน หมายเลขโทรศัพท์ อีเมล
+				</li>
+				<li>
+					ข้อมูลอื่นๆ เช่น ลายมือชื่อ
 					และข้อมูลอื่นใดที่ถือว่าเป็นข้อมูลส่วนบุคคลภายใต้กฎหมายคุ้มครองข้อมูลส่วนบุคคล
 				</li>
 			</ul>
@@ -61,11 +65,12 @@ import BackHomeLink from '../components/BackHomeLink.astro';
 			</h2>
 			<p>
 				เราจะทําการเก็บรวบรวม หรือใช้ข้อมูลส่วนบุคคลของ “เจ้าของข้อมูลส่วนบุคคล"
-				เพื่อประโยชน์ใน การรวบรวมรายชื่อเพื่อ เสนอ<mark
-					>ร่างพระราชบัญญัติ... พ.ศ. ....</mark
-				> เท่านั้น หากภายหลังมีการ เปลี่ยนแปลงวัตถุประสงค์ ทางเราจะแจ้งให้ท่านทราบ
-				เพื่อขอความยินยอม ทั้งนี้จะไม่กระทำการเก็บรวบรวม ใช้ หรือเปิดเผยข้อมูลส่วน
-				บุคคลของท่าน เพื่อประโยชน์อย่างอื่น ที่นอกเหนือจากวัดถุประสงค์ที่ได้แจ้งไว้กับท่านไว้ก่อนหรือขณะเก็บรวบรวม
+				เพื่อประโยชน์ใน การรวบรวมรายชื่อเพื่อ
+				เสนอร่างพระราชบัญญัติระเบียบบริหารราชการเชียงใหม่มหานคร พ.ศ.... เท่านั้น
+				หากภายหลังมีการ เปลี่ยนแปลงวัตถุประสงค์ ทางเราจะแจ้งให้ท่านทราบ
+				เพื่อขอความยินยอม ทั้งนี้จะไม่กระทำการเก็บรวบรวม ใช้
+				หรือเปิดเผยข้อมูลส่วน บุคคลของท่าน เพื่อประโยชน์อย่างอื่น
+				ที่นอกเหนือจากวัดถุประสงค์ที่ได้แจ้งไว้กับท่านไว้ก่อนหรือขณะเก็บรวบรวม
 			</p>
 		</div>
 
@@ -96,9 +101,10 @@ import BackHomeLink from '../components/BackHomeLink.astro';
 				และ/หรือเปิดเผยข้อมูลส่วนบุคคลภายใต้หลักเกณฑ์ที่กฎหมายกำหนด เช่น
 				การเปิดเผย ข้อมูลต่อหน่วยงานราชการ หน่วยงานภาครัฐ หน่วยงานกำกับดูแล
 				ผู้ให้บริการภายนอก รวมถึงในกรณีที่มีการร้องขอให้เปิดเผยข้อมูล
-				โดยอาศัยอำนาจตามกฎหมาย ดลอดระยะเวลาการรวบรวมรายชื่อเพื่อเสนอ<mark
-					>ร่างพระราชบัญญัติ... พ.ศ. ....</mark
-				> และภายใน 1 ปีหลังสิ้นสุดกระบวนการรวบรวมรายชื่อ เพื่อใช้สำหรับการตรวจสอบความถูกต้อง
+				โดยอาศัยอำนาจตามกฎหมาย
+				ดลอดระยะเวลาการรวบรวมรายชื่อเพื่อเสนอร่างพระราชบัญญัติระเบียบบริหารราชการเชียงใหม่มหานคร
+				พ.ศ.... และภายใน 1 ปีหลังสิ้นสุดกระบวนการรวบรวมรายชื่อ
+				เพื่อใช้สำหรับการตรวจสอบความถูกต้อง
 			</p>
 		</div>
 
@@ -186,8 +192,18 @@ import BackHomeLink from '../components/BackHomeLink.astro';
 				ท่านสามารถติดต่อเราได้ผ่านช่องทางดังนี้
 			</p>
 			<ul>
-				<li><mark>อีเมล โทรศัพท์ ที่อยู่ หรืออื่นๆ</mark></li>
+				<li>อีเมล: cm.mhnk1@gmail.com</li>
+				<li>โทรศัพท์: 094-7936954</li>
+				<li>
+					สถานที่ติดต่อ: เลขที่ 133/195 หมู่บ้านทวีโชค หมู่ 6 ต.ตลาดขวัญ
+					อ.ดอยสะเก็ด จ.เชียงใหม่ 50220
+				</li>
 			</ul>
+			<div class="body-03 font-semibold">
+				เมื่อคุณตกลงยอมรับนโยบายคุ้มครองข้อมูลส่วนบุคคลฉบับนี้
+				เราจะถือว่าท่านยอมรับข้อกำหนดและ เงื่อนไขทั้งหมด
+				และการตกลงยอมรับดังกล่าวมีผลสมบูรณ์
+			</div>
 		</div>
 	</SectionContainer>
 </Body>
