feat: add responsive

--- a/src/components/index/AboutSection.astro
+++ b/src/components/index/AboutSection.astro
@@ -8,9 +8,10 @@ import SectionContainer from '../SectionContainer.astro';
 >
 	<h2 class="body-03 font-semibold">ผู้จัดทำ</h2>
 	<div class="body-02 mt-[10px] text-center">
-		จัดทำขึ้นโดยภาคประชาชนชาวเชียงใหม่ ที่ต้องการปลดล็อคเชียงใหม่
-		จากการรวมศูนย์อำนาจ รัฐส่วนกลาง <br /> ให้เชียงใหม่จัดการตนเองโดยไม่จำเป็น ต้องรอรัฐส่วนกลางอีกต่อไป
+		จัดทำขึ้นโดยภาคประชาชนชาวเชียงใหม่ <br class="block md:hidden" /> ที่ต้องการปลดล็อคเชียงใหม่
+		<br class="block md:hidden" /> จากการรวมศูนย์อำนาจ รัฐส่วนกลาง <br /> ให้เชียงใหม่จัดการตนเองโดยไม่จำเป็น
+		<br class="block md:hidden" /> ต้องรอรัฐส่วนกลางอีกต่อไป
 	</div>
 	<img class="-mt-[120px]" src="group-work.png" alt="group work" />
-	<img class="-mt-10" src="activities.png" alt="activities" />
+	<img class="-mt-10 mb-60 md:mb-0" src="activities.png" alt="activities" />
 </SectionContainer>
