--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,9 +38,13 @@ import { isCampaignEnded } from '../utils/campaign';
 			<div
 				class="absolute bottom-0 left-1/2 h-[82px] w-[calc(100vw-232px)] -translate-x-1/2 transform bg-[#1169A8]"
 			>
-				<div class="absolute bottom-1 left-1/2 -translate-x-1/2 text-base-300">
+				<a
+					class="body-01 absolute bottom-1 left-1/2 w-[82px] -translate-x-1/2 text-base-300"
+					href="https://wevis.info/"
+					target="_blank"
+				>
 					Made by <span class="underline">WeVis</span>
-				</div>
+				</a>
 			</div>
 			<img
 				src="/pole-left.png"
