--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,15 @@ import { isCampaignEnded } from '../utils/campaign';
 <Body>
 	<main class="relative flex flex-col">
 		<div class="relative">
+			<div
+				class="absolute left-1/2 h-[367px] w-[509px] -translate-x-1/2 overflow-hidden md:hidden"
+			>
+				<img
+					src="/cover.png"
+					alt="cover"
+					class="h-full w-full overflow-hidden md:hidden"
+				/>
+			</div>
 			<LandingSection />
 		</div>
 		<IntroSection />
