fix: font color

--- a/src/components/index/AboutSection.astro
+++ b/src/components/index/AboutSection.astro
@@ -4,7 +4,7 @@ import SectionContainer from '../SectionContainer.astro';
 
 <SectionContainer
 	outerClass="bg-primary"
-	innerClass="relative flex max-w-screen-md flex-col items-center text-center"
+	innerClass="relative flex max-w-screen-md flex-col items-center text-center text-neutral"
 >
 	<h2 class="body-03 font-semibold">ผู้จัดทำ</h2>
 	<div class="body-02 mt-[10px] text-center">
