fix: image overflow

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { isCampaignEnded } from '../utils/campaign';
 
 <Body>
 	<main class="relative flex flex-col">
-		<div class="relative">
+		<div class="relative overflow-hidden">
 			<div
 				class="absolute left-1/2 h-[367px] w-[509px] -translate-x-1/2 overflow-hidden md:hidden"
 			>
