fix: margin's image

--- a/src/components/index/LandingSection.astro
+++ b/src/components/index/LandingSection.astro
@@ -29,7 +29,7 @@ const documentCount =
 			alt="cover"
 			class="hidden h-[367px] w-[508px] md:block"
 		/>
-		<span class="body-01 absolute bottom-0 font-semibold">
+		<span class="body-01 absolute bottom-5 font-semibold">
 			ร่วมกันปลดล็อคให้เชียงใหม่จัดการตนเองโดยไม่จำเป็นต้องรอรัฐส่วนกลางอีกต่อไป
 		</span>
 	</div>
@@ -40,7 +40,7 @@ const documentCount =
 					<img
 						src="/regist.png"
 						alt="regist"
-						class="mb-3 mt-6 h-[218px] w-[218px] cursor-pointer"
+						class="mt-3 h-[218px] w-[218px] cursor-pointer"
 					/>
 				</a>
 			) : (
@@ -77,9 +77,7 @@ const documentCount =
 				}
 			</p>
 		</div>
-		<div
-			class="mb-0 mb-[80px] mt-0 flex items-center justify-center gap-3 text-accent md:mt-[35px]"
-		>
+		<div class="mb-[80px] flex items-center justify-center gap-3 text-accent">
 			<span class="body-01 text-neutral">แชร์</span>
 			<Sharer />
 		</div>
