feat: add website's law link

--- a/src/components/index/IntroSection.astro
+++ b/src/components/index/IntroSection.astro
@@ -96,10 +96,12 @@ import DocumentIcon from '../icons/DocumentIcon.svelte';
 				</div>
 			</div>
 		</div>
-		<div
+		<a
 			class="heading-03 flex w-full cursor-pointer items-center justify-center gap-[14px] rounded-b-lg bg-neutral py-[14px] font-bold text-secondary"
+			href="https://drive.google.com/file/d/1YYhv4fy2KaY2UuhmF2YBE-oNvcs-3VIL/"
+			target="_blank"
 		>
 			อ่านร่าง พรบ. ฉบับเต็ม <DocumentIcon />
-		</div>
+		</a>
 	</div>
 </SectionContainer>
