fix: padding section

--- a/src/components/index/AboutSection.astro
+++ b/src/components/index/AboutSection.astro
@@ -3,7 +3,7 @@ import SectionContainer from '../SectionContainer.astro';
 ---
 
 <SectionContainer
-	outerClass="bg-primary"
+	outerClass="bg-primary pt-[28px] md:pb-28 md:pt-[28px]"
 	innerClass="relative flex max-w-screen-md flex-col items-center text-center text-neutral"
 >
 	<h2 class="body-03 font-semibold">ผู้จัดทำ</h2>
