--- a/src/components/index/IntroSection.astro
+++ b/src/components/index/IntroSection.astro
@@ -6,7 +6,7 @@ import DocumentIcon from '../icons/DocumentIcon.svelte';
 <SectionContainer
 	id="intro"
 	innerClass="flex max-w-screen-md flex-col items-center gap-3 text-center"
-	outerClass="bg-[#1169A8]"
+	outerClass="bg-[#1169A8] pt-[35px] md:pt-[30px]"
 >
 	<img
 		src="chiangmai.png"
