--- a/src/components/index/SignSection.astro
+++ b/src/components/index/SignSection.astro
@@ -5,7 +5,7 @@ import SignOptions from './SignOptions.svelte';
 
 <SectionContainer
 	id="sign"
-	outerClass="bg-primary"
+	outerClass="bg-primary pb-[24px] md:py-[50px]"
 	innerClass="flex w-full max-w-screen-lg flex-col gap-6 md:flex-row md:gap-12"
 	hideNavbar
 >
