--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { isCampaignEnded } from '../utils/campaign';
 	<main class="relative flex flex-col">
 		<div class="relative overflow-hidden">
 			<div
-				class="absolute left-1/2 h-[367px] w-[509px] -translate-x-1/2 overflow-hidden md:hidden"
+				class="absolute -top-14 left-1/2 h-[367px] w-[509px] -translate-x-1/2 overflow-hidden md:top-0 md:hidden"
 			>
 				<img
 					src="/cover.png"
