--- a/src/components/index/LandingSection.astro
+++ b/src/components/index/LandingSection.astro
@@ -18,8 +18,8 @@ const documentCount =
 ---
 
 <SectionContainer
-	outerClass="h-auto justify-center bg-[#03C038] md:h-screen"
-	innerClass="relative flex flex-col text-center"
+	outerClass="h-auto justify-center bg-[#03C038] pt-0 md:h-screen"
+	innerClass="relative flex flex-col justify-start text-center"
 >
 	<div
 		class="relative flex h-[320px] w-[288px] flex-col items-center justify-center md:w-[498px]"
