fix: footer in landing page

--- a/src/components/index/LandingSection.astro
+++ b/src/components/index/LandingSection.astro
@@ -83,7 +83,7 @@ const documentCount =
 		</div>
 	</div>
 </SectionContainer>
-<div class="absolute bottom-0 w-full">
+<div class="absolute -bottom-10 w-full">
 	<div
 		class="absolute bottom-0 left-1/2 hidden h-[82px] w-[calc(100vw-232px)] -translate-x-1/2 transform bg-[#1169A8] md:block"
 	>
