feat:  add plausible analytics

--- a/src/layouts/Body.astro
+++ b/src/layouts/Body.astro
@@ -39,6 +39,10 @@ const previewImageUrl =
 			Config.theme.stylesheets &&
 				Config.theme.stylesheets.map((href) => <link {href} rel="stylesheet" />)
 		}
+		<script
+			defer
+			data-domain="cmlocalselfgov.com"
+			src="https://analytics.punchup.world/js/script.js"></script>
 	</head>
 	<body class="body-02">
 		<slot />
